Adds slides link

--- a/App.ipynb
+++ b/App.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "ffdf62aa-eddf-45e0-b35a-586037594275",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "Collecting pytest\n",
       "  Downloading pytest-7.1.2-py3-none-any.whl (297 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m297.0/297.0 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m297.0/297.0 kB\u001b[0m \u001b[31m884.7 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25hCollecting pytest-cov\n",
       "  Downloading pytest_cov-3.0.0-py3-none-any.whl (20 kB)\n",
       "Collecting ipdb\n",
@@ -21,45 +21,45 @@
       "\u001b[?25hRequirement already satisfied: python-dateutil in /opt/conda/lib/python3.10/site-packages (from -r requirements.txt (line 4)) (2.8.2)\n",
       "Collecting freezegun\n",
       "  Downloading freezegun-1.2.2-py3-none-any.whl (17 kB)\n",
+      "Requirement already satisfied: packaging in /opt/conda/lib/python3.10/site-packages (from pytest->-r requirements.txt (line 1)) (21.3)\n",
       "Collecting py>=1.8.2\n",
       "  Downloading py-1.11.0-py2.py3-none-any.whl (98 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m98.7/98.7 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m98.7/98.7 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hCollecting tomli>=1.0.0\n",
       "  Downloading tomli-2.0.1-py3-none-any.whl (12 kB)\n",
-      "Requirement already satisfied: attrs>=19.2.0 in /opt/conda/lib/python3.10/site-packages (from pytest->-r requirements.txt (line 1)) (22.1.0)\n",
-      "Requirement already satisfied: packaging in /opt/conda/lib/python3.10/site-packages (from pytest->-r requirements.txt (line 1)) (21.3)\n",
       "Collecting iniconfig\n",
       "  Downloading iniconfig-1.1.1-py2.py3-none-any.whl (5.0 kB)\n",
       "Collecting pluggy<2.0,>=0.12\n",
       "  Downloading pluggy-1.0.0-py2.py3-none-any.whl (13 kB)\n",
+      "Requirement already satisfied: attrs>=19.2.0 in /opt/conda/lib/python3.10/site-packages (from pytest->-r requirements.txt (line 1)) (22.1.0)\n",
       "Collecting coverage[toml]>=5.2.1\n",
       "  Downloading coverage-6.4.4-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (212 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m212.5/212.5 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: setuptools in /opt/conda/lib/python3.10/site-packages (from ipdb->-r requirements.txt (line 3)) (65.1.0)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m212.5/212.5 kB\u001b[0m \u001b[31m129.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: setuptools in /opt/conda/lib/python3.10/site-packages (from ipdb->-r requirements.txt (line 3)) (65.2.0)\n",
       "Requirement already satisfied: ipython>=7.17.0 in /opt/conda/lib/python3.10/site-packages (from ipdb->-r requirements.txt (line 3)) (8.4.0)\n",
       "Collecting toml>=0.10.2\n",
       "  Downloading toml-0.10.2-py2.py3-none-any.whl (16 kB)\n",
       "Requirement already satisfied: decorator in /opt/conda/lib/python3.10/site-packages (from ipdb->-r requirements.txt (line 3)) (5.1.1)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.10/site-packages (from python-dateutil->-r requirements.txt (line 4)) (1.16.0)\n",
+      "Requirement already satisfied: jedi>=0.16 in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.18.1)\n",
+      "Requirement already satisfied: traitlets>=5 in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (5.3.0)\n",
+      "Requirement already satisfied: stack-data in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.4.0)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (3.0.30)\n",
       "Requirement already satisfied: pickleshare in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.7.5)\n",
       "Requirement already satisfied: pygments>=2.4.0 in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (2.13.0)\n",
       "Requirement already satisfied: matplotlib-inline in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.1.6)\n",
-      "Requirement already satisfied: stack-data in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.4.0)\n",
-      "Requirement already satisfied: traitlets>=5 in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (5.3.0)\n",
-      "Requirement already satisfied: jedi>=0.16 in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.18.1)\n",
       "Requirement already satisfied: pexpect>4.3 in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (4.8.0)\n",
       "Requirement already satisfied: backcall in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.2.0)\n",
-      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /opt/conda/lib/python3.10/site-packages (from ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (3.0.30)\n",
       "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/conda/lib/python3.10/site-packages (from packaging->pytest->-r requirements.txt (line 1)) (3.0.9)\n",
       "Requirement already satisfied: parso<0.9.0,>=0.8.0 in /opt/conda/lib/python3.10/site-packages (from jedi>=0.16->ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.8.3)\n",
       "Requirement already satisfied: ptyprocess>=0.5 in /opt/conda/lib/python3.10/site-packages (from pexpect>4.3->ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.7.0)\n",
       "Requirement already satisfied: wcwidth in /opt/conda/lib/python3.10/site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.2.5)\n",
+      "Requirement already satisfied: pure-eval in /opt/conda/lib/python3.10/site-packages (from stack-data->ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.2.2)\n",
       "Requirement already satisfied: executing in /opt/conda/lib/python3.10/site-packages (from stack-data->ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.10.0)\n",
       "Requirement already satisfied: asttokens in /opt/conda/lib/python3.10/site-packages (from stack-data->ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (2.0.8)\n",
-      "Requirement already satisfied: pure-eval in /opt/conda/lib/python3.10/site-packages (from stack-data->ipython>=7.17.0->ipdb->-r requirements.txt (line 3)) (0.2.2)\n",
       "Building wheels for collected packages: ipdb\n",
       "  Building wheel for ipdb (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for ipdb: filename=ipdb-0.13.9-py3-none-any.whl size=11628 sha256=9af653c28629ec266d5ca45a942b4f411c045641bbad93790c81f4b4bded9887\n",
+      "\u001b[?25h  Created wheel for ipdb: filename=ipdb-0.13.9-py3-none-any.whl size=11628 sha256=a4272b7c8555b6557133f8f5910731679598cf50dd9455a6b1db2efbb8eebf3d\n",
       "  Stored in directory: /home/jovyan/.cache/pip/wheels/54/02/23/574616a4405110c3a9ccf58c81a7bdea1145360f54adb240a5\n",
       "Successfully built ipdb\n",
       "Installing collected packages: iniconfig, tomli, toml, py, pluggy, coverage, pytest, freezegun, pytest-cov, ipdb\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "f733a014-9869-42e6-9aae-ab229291c929",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "7d7627b9-a359-4c2a-a0f1-5383117afe46",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "136e3067-681a-4559-acf2-fe2050cb0276",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "be9a419e-fa09-4e1b-8937-88f3e55666b8",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "ca67f9c2-b089-43ba-a302-6bfb24635f22",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "0dbcef7b-ba12-4f3d-965e-dd0e09808dd3",
    "metadata": {},
    "outputs": [],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "7ce0d685-bd4b-489b-bdcf-42a25b051089",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "8689ece2-9b34-4614-a141-8149a814d2e6",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "ac1836f7-19a4-4fe7-8177-0704b7466284",
    "metadata": {},
    "outputs": [
@@ -289,12 +289,13 @@
    "source": [
     "piscinal_de_liquidez.simulate_transaction(amount_t0=400)    # 396.04 ETH\n",
     "print(piscinal_de_liquidez.swapExactTokensForTokens(amount0_in=400, amount1_out_min=396, to=\"rsarai\"))\n",
+    "\n",
     "piscinal_de_liquidez.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "b761639b-dc98-429c-911f-b30bfe6944c1",
    "metadata": {},
    "outputs": [
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "d9925498-2fce-430d-9979-9b64890c8c63",
    "metadata": {},
    "outputs": [
@@ -350,7 +351,7 @@
        "(50000, 50000)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "id": "195b60e2-7d86-4c1b-950d-f1162876073d",
    "metadata": {},
    "outputs": [
@@ -525,6 +526,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6b762319-f233-447e-845e-7c30c3a7e914",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a589d0b4-3eb8-4650-8dcc-ffc889474f4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "id": "c7df03c4-40ba-40ce-810d-692e17b4a7a1",
    "metadata": {},
@@ -646,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
